--- a/source/Motivation.adoc
+++ b/source/Motivation.adoc
@@ -4,7 +4,7 @@ Als wir erfahren haben das wir eine Maturarbeit schreiben mussten, war für uns 
 Tobias hatte die Idee, etwas mit Gaming zu machen.
 Da wir beide leidenschaftliche Gamer sind, fanden wir die Idee gut und machten uns auf die Suche nach einem geeigneten Thema.
 Wir beide lieben Role-playing Games (RPG) und versuchten deshalb, diese in unser Thema einzubauen.
-RPGs sind in den 80er und 90er Jahren gross geworden und prägten die Gaming Industrie.
+RPG's sind in den 80er und 90er Jahren gross geworden und prägten die Gaming Industrie.
 Wir sind beide Ende der 90er Jahre geboren und haben uns erst in unserer frühen Jugend mit Games befasst.
 Da wir und deshalb viel Gaming Geschichte verpasst haben, ist uns die Idee gekommen, die Veränderung von RPGs im Laufe der Zeit zu analysieren.
 Wir waren beide zufrieden mit unserem Thema, merkten aber schnell, dass es viele Schwierigkeiten geben würde unser Thema so umzusetzen, aber wir wollten unser Thema weiter behandeln.
