--- a/source/Auswertung der Umfrage.adoc
+++ b/source/Auswertung der Umfrage.adoc
@@ -57,8 +57,14 @@ Danach gibt es sehr viele Antworten mit 3 Punkten wie _Life is Strange_, _Metal 
 Da wir die Entwicklung untersuchen haben wir versucht die Spiele zu gliedern in die Jahre in der sie erscheinen sind.
 Wir habe sie nach Jahrzehnte sortiert und sehr erstaunt gemerkt das die meissten der gennanten Spiele in diesem Jahrzehnt erschienen sind.
 Das heisst die meissten Spiele die in unserer Umfrage gennant wurden sind nach 2010 entwickelt worden.
-Insgesamt wurden 19 Spiele aus den Jahren 2010-2018 genannt.
-Von 2000-2009 waren es 16 genannte Spiele, von 1990-1999 sechs Spiele und von 1980-1989 waren es noch zwei Spiele.
+Insgesamt wurden 22 Spiele aus den Jahren 2010-2018 genannt.
+Von 2000-2009 waren es 12 genannte Spiele, von 1990-1999 sechs Spiele und von 1980-1989 waren es noch zwei Spiele.
 Als nächstes Sortierten wir sie nach Genre.
-Da teilen sich die Adventures und die Rollenspiele die selbe anzahl an erwähnungen, 15 Adventures und 15 Rollenspiele wurden genannt.
-Dazu kammen noch drei Shooter swowie drei Jump'n'Run Spiele und zwei Strategie Spiele.
+19 Adventures und 11 Rollenspiele wurden genannt.
+Dazu kammen noch drei Shooter swowie drei Jump'n'Run Spiele, zwei Strategie Spiele und eine Simulation.
+Wie wir sehen geht es den Storys in Videospielen momentan sogar sehr gut.
+Über 22 Spiele die seit dem Jahr 2010 erschienen sind wurden bei unserer Umfrage genannt.
+Davon waren zwei Spiele sogar aus dem Jahre 2017.
+_Divinity: Orignial Sin 2_ und _What Remains of Edith Finch_.
+Zwei Spiele mit unglaublich guter Story die bereits einige dazu anregte es für das Spiel mit der besten Story zu halten.
+Wir denken in Zukunft wird sich die Gaming-Industrie weiterentwickeln und weiterhin Spiele mit guter Story hervorbringen. 
