--- a/source/Motivation.adoc
+++ b/source/Motivation.adoc
@@ -13,5 +13,5 @@ Wir hatten mehrere Ideen welche auch im Bereich Gaming waren.
 Wir wollten zum Beispiel etwas über E-Sports machen, jedoch waren unsere Meinung zu unterschiedlich und wir hätten keine Arbeit darüber schreiben können.
 Eine Idee war es, die Produktion von Videogames zu untersuchen. Wir haben uns nun entschieden, die Story von Videogames untersuchen , indem wir verschiedene RPGs der letzten 10 Jahre anschauen.
 Schlussendlich haben wir zusammen mit unserer Betreuungsperson die Idee gehabt, die Meinung von Konsumenten zur Storyline in Games herauszufinden.
-Gleichzeitig wollen wir aufzeigen wie Storytelling in Games entstanden ist und was genau die Storyline in Games ist.
+Gleichzeitig wollen wir darlegen wie Storytelling in Games entstanden ist und was genau die Storyline in Games ist.
 Von Anfang an wollten wir ein Interview oder eine Umfrage machen um unsere Arbeit zu unterstützen und dieses Thema ermöglichte dies.
