--- a/source/Fragestellung und Hypothese.adoc
+++ b/source/Fragestellung und Hypothese.adoc
@@ -8,13 +8,13 @@ Wenn dem so ist, wann hat dann diese neue Spiele-Ära begonnen und welche Alters
 All das versuchen wir in dieser Arbeit zu untersuchen und zu beantworten.
 Dafür definierten wir eine Leitfrage und legten uns auf einen Zeitraum fest, da es sonst zu viel geworden wäre.
 In unserem Fall lautet diese: Hat sich die Relevanz der Story-Line der Games in den letzten 20 Jahren verändert?
-Wir denken, dass vor allem die jüngeren Spieler lieber online mit ihren Freunden spielen und die älteren eher eine gute Geschichte geniessen möchten.
+Wir denken, dass vor allem die jüngeren Spieler lieber Online mit ihren Freunden spielen und die älteren eher eine gute Geschichte geniessen möchten.
 Was den Wandel in der Branche angeht vermuten wir, dass die Industrie eher mit dem Online Trend mitfährt, da immer mehr Games neben der Story einen Online-Modus haben oder sogar nur Online zu spielen sind.
 Zu behaupten die Story sei gänzlich unwichtig geworden, würden wir nicht wagen, da dies absolut nicht der Fall ist.
 Dennoch spüren wir diese Bewegung in eine neue Richtung.
 Wir können verstehen, dass der Online Trend für die Spielemacher lukrativ ist, da man dort gut sogenannte Micro-Transactions einbringen kann, die immer weiter für Einnahmen sorgen.
 Ebenfalls ist der technische Fortschritt ein Faktor, den man nicht ausser Acht lassen sollte.
-Dieser eröffnet natürlich viele neue Features, die vor 20 Jahren, als Online zu spielen noch nicht mal eine Idee war, noch nicht möglich waren.
+Dieser eröffnet natürlich viele neue Features, die vor 20 Jahren, noch nicht möglich waren.
 Nicht minder ist aber die Trauer bei uns, wenn ein Spiel, das man schon lange erwartet, plötzlich nur eine kurze Story hat und einem nur noch der Online Modus bleibt.
 Wir sind überzeugt, dass wir nicht die Einzigen sind, die so denken, viele aber auch anderer Meinung sind.
 Wir können aber nicht einfach nur Behauptungen in den Raum stellen und den Stempel darunter machen, weswegen wir uns Methoden erarbeiteten um unsere These zu bestätigen oder auch zu wiederlegen.
