--- a/source/Auswertung der Umfrage.adoc
+++ b/source/Auswertung der Umfrage.adoc
@@ -36,7 +36,7 @@ Bei der Frage wie diese Personen die Story erleben haben wir herausgefunden das 
 Da die Frage mehrere Antwortsmöglichkeiten hatte, haben wir zudem erfahren das 50% zudem nach Storyelementen wie Tagebücher oder Collectabels suchen.
 Nur etwa 10% ist eher uninteressiert an der Story eines Spiels.
 Nun kommt eine der wichtigsten Fragen der Umfrage, wir fragten:"Bist du mit der Storyline in Spielen seit 2012 zufrieden."
-Die Antwert hat uns sehr überrascht.
+Die Antwort hat uns sehr überrascht.
 Die meisten sagten, dass sie im Allgemeinen zufrieden sind mit Geschichten in neuen Videospielen.
 Klar gab es auch Antworten, die sagten, dass sie nicht zufrieden sind und sogar eine die ganz unzufrieden ist.
 Was auch noch interessant war, das niemand die 10 angekreuzt hat, also keiner der Befragten ist zu 100% zufrieden, es hat Potential für Verbesserung.
