--- a/source/Story in Videospielen.adoc
+++ b/source/Story in Videospielen.adoc
@@ -64,17 +64,7 @@ Diese Sequenzen nennt man auch 'Cutscenes', welche zur Belohnung des Spielers un
 Heute, 12 Jahre später sind die technischen Möglichkeiten so weiterentwickelt, dass es möglich ist, quasi realistische Bilder im eigentlichem Spiel zu haben.
 Zum Beispiel wird mit sogenantem "Motion capturing" das Aussehen und die Bewegung von Schauspielern aufgenommen.
 Die sich daraus ergebenen Daten machen es möglich, das sich eine Figur im Spiel natürlich bewegt, auch wenn die jeweilige Aktion oder Handlung nicht vorgegeben war.
-
-
-
-
-
-
-gab es bereits eine 70-Jährige Filmgeschichte als die ersten Videospiele auftauchten.
-Die ersten Videospiele bedienen sich eines narrativen Rahmens, der den Spieler durch eine die Spielszenen ergänzende Geschichte animiert.
-Da die technischen Möglichkeiten begrenzt waren mussten die Spieler mit viel Fantasy aufwenden um sich die Geschichte vorzustellen.
-Früher konnte man die Charaktere nur mit einem Punkt darstellen während wir heute Schauspieler für Spiele haben.
-Das heisst früher musste man die Geschichten mit Klötzen darstellen während wir heute Filmqualität in den Videospielen haben.
+Weil es so ändlich ist wie Film ist es interessant was Filmregisseure dazu sagen,
 
 
 
@@ -95,15 +85,19 @@ It’s simply a game."
 
 Wir verstehen was uns Lucas hier sagen will, jedoch sehen wir dies etwas anders.
 Es ist nicht einfach nur ein Spiel sondern der Spieler selber wird zum gestallter der Geschichte und kann diese erleben wie er es für sich persönlich gerne hätte.
-Das Spiel _Rimworld_ ist ein gutes Beispiel.
-Das Spiel startet indem man auswählt was für einen AI storyteller man will, als nächstes wählt man sein Team aus, dann erfährt man etwas zur Vorgeschichte.
-Man ist aus einem Raumschiff abgestürzt und auf dieser neuen Welt gelandet.
-Mehr erfährt man nicht.
-Danach kann man selber entscheiden was man tut, eine Basis aufbauen ist meist die beste Idee, da die Team Mitglieder verschiedene Bedürfnisse haben.
-Sie brauchen ein Bett, ein Dach über dem Kopf, etwas zu Essen und so weiter.
-Nun können Dinge passieren die vom AI storyteller vorgegeben sind.
-Zum Beispiel könnte ein Tier in der Umgebung wild werden und alles angreifen was ihm in die Quere kommt oder ein Teil eines Raumschiffes stürzt ab und ein schwer Verletzter ist mit dabei, dann kann man selber entscheiden was man tut, tötet man das wild gewordene Tier oder versucht man es aus dem Weg zu gehen, hilft man der verletzten Person und lässt sie laufen oder sperrt man sie ein, um sie möglicherweise in sein Team zu holen.
-Wie man sieht gibt es tausende an möglichen Szenarien und der Spieler entscheidet immer selber wie er mit gewissen Situationen um geht und wie sich die Geschichte des Teams weiterentwickelt.
+Der Spieler wird teilweise sogar dazu animiert die Geschichte des Spieles selber zu gestallten oder herauszufinden.
+Somit gibt es sehr viele Interpretationen, auch in der Literatur oder im Film wird etwas ändliches gemacht.
+Man lässt die Geschichte offen und lässt die Leser und die Betrachter spekulieren was passieren könnte.
+Dadurch öffnet man eine völlig neue herangehensweise an die Geschichte und ob dies in einem Spiel oder einem Film passiert ist nicht relevant.
+Zum Beispiel in der Fernseh-Serie _Game of Thrones_, nach jeder Staffel gibt es im Internet aber tausende Theorien was nun als nächstes in der Serie passieren könnte oder wie die Serie endet.
+Das selbe gibt es auch in Videospielen, in _World of Warcraft_, welches eine immer weitergehende Geschichte besitzt, werden immer wieder Theorien aufgestellt was mit den Charakteren und der Spielwelt als nächstes passiert.
+In _World of Warcraft_ ist die Art wie die Geschichte erzählt wird sehr speziell.
+Der Spieler ist ein teil der Spielwelt und hat auch Einfluss auf diese.
+Im Jahr 2017 ist das neue Erweiterungs-Paket für _World of Warcraft_ erschienen.
+Die Spieler machten sich auf den Weg neue Ort zu entdecken, Stärker zu werden und neue Verbündete zu gewinnen.
+Die Geschichte von _World of Warcraft_ ist eine Klassische "Monster überwinden"-Story, jedoch gibt es nicht nur einen Protagonisten sondern die Spieler müssen zusammen gegen die Monster kämpfen.
+Wir sehen das so, dass dies auch eine Geschichte ist und nicht nur ein Spiel, auch wenn jeder das machen kann was er will. 
+
 
 George Lucas sagte auch:
 
