--- a/source/Story in Videospielen.adoc
+++ b/source/Story in Videospielen.adoc
@@ -96,7 +96,7 @@ Der Spieler ist ein teil der Spielwelt und hat auch Einfluss auf diese.
 Im Jahr 2017 ist das neue Erweiterungs-Paket für _World of Warcraft_ erschienen.
 Die Spieler machten sich auf den Weg neue Ort zu entdecken, Stärker zu werden und neue Verbündete zu gewinnen.
 Die Geschichte von _World of Warcraft_ ist eine Klassische "Monster überwinden"-Story, jedoch gibt es nicht nur einen Protagonisten sondern die Spieler müssen zusammen gegen die Monster kämpfen.
-Wir sehen das so, dass dies auch eine Geschichte ist und nicht nur ein Spiel, auch wenn jeder das machen kann was er will. 
+Wir sehen das so, dass dies auch eine Geschichte ist und nicht nur ein Spiel, auch wenn jeder das machen kann was er will.
 
 
 George Lucas sagte auch:
@@ -121,14 +121,9 @@ Nun auch diese Aussage finden wir etwas fragwürdig.
 Für uns kann es auch in einem Spiel eine gute Handlung haben.
 Man nehme _The Witcher 3: The Wild Hunt_ als Beispiel, ein Spiel welches auf einem Roman basiert.
 Jedoch sind wir uns sicher das jeder der das Spiel gespielt und das Buch gelesen hat sagen wird das in dem Spiel die Story viel besser rüber kommt als im Buch.
-Im Spiel geht es um Geralt von Riva der seine Tochter Ciri sucht.
-Auf der Suche nach Ciri muss Geralt viele Abenteuer bestreiten.
-Er ist ein sogenannter Witcher, welcher spezielle Fähigkeiten hat.
-Im Spiel werden neben der Hauptstory auch noch sehr viele Zusatzgeschichten erzählt.
-Zum Beispiel die Geschichte des Roten Barons.
-Da der Rote Baron Ciri gesehen hat bittet Geralt den Baron ihm Hinweise zu geben wo sie sein könnte.
-Jedoch benötigt der Baron seine Hilfe.
-Auch seine Tochter und Frau sind verschwunden und er soll sie für ihn finden.
+Die Geschichte des Spieles ist sehr vielfaltig.
+Es werden viele kurze Geschichten erzählt die auch zur Hauptgeschichte beitragen.
+Viele von diesen Geschichten fallen wieder in unser Schema, es gibt "Monster überwinden"-Storys, "Die Aufgabe"-Passagen und auch "Tragödien" werden erzählt.
 Es gibt auch sehr gute Beispiele von Spiele die nicht auf einem Buch basieren.
-Die _Mass Effect_-Reihe, welche eine sehr tiefgründige Story erzählt.
-Eines der besten Beispiele unserer Meinung nach ist die _The walking dead_-Reihe in der eine packende Geschichte erzählt wird und man wie gebannt vor dem Bildschirm sitzt und mitfiebert.
+Die _Mass Effect_-Reihe, welche auch klare verbindungen zu den oben erwähnten Handlungstypen aufweist.
+Wir stehen dammit im Wiederspruch zur Aussage von Lucas, denn wir finden das es auch in Videospielen einen "Plot" geben kann.
