--- a/source/Literaturverzeichnis.adoc
+++ b/source/Literaturverzeichnis.adoc
@@ -4,4 +4,8 @@
 
 - [[[bishop]]], Bishop, Bryan (2013): 'Lucas and Spielberg on Storytelling in Games', https://www.theverge.com/2013/6/13/4427444/lucas-spielberg-storytelling-in-games-its-not-going-to-be-shakespeare-usc (Abgerufen am 13.01.2018)
 
+- [[[booker]]], Booker, Christopher (2004), 'The seven basic plots: Why we tell stories', A&C Black.
+
 - [[[pöhnert]]], Pöhnert, Julius (2005): 'Wechselspiele zwischen Film und Videogames - Die Ästhetik von Film, Videospiel und deren Adaptionen', München, GRIN Verlag, https://www.grin.com/document/42060 (Abgerufen am 14.01.2018)
+
+
